syntax = "proto3";

option java_multiple_files = false;

option java_package = "com.amg.fulfillment.cloud.logistics.api.proto";

option java_outer_classname = "SaleOrderAssignmentPurchaseIdGTO";

message SaleOrderAssignmentPurchaseIdRequest{
  // 采购id
  repeated SaleOrder saleOrder = 1;
}

message SaleOrder{
  string saleOrderId = 1;
  string itemId = 2;
  string purchaseId = 3;
}

message SaleOrderAssignmentPurchaseIdResult{
  string errorCode = 1;
  string msg = 2;
  bool success = 3;
  string requestId = 4;
  repeated SaleOrderPurchaseIdResponse data = 5;
}

message SaleOrderPurchaseIdResponse{
  string saleOrderId = 1;
  string itemId = 2;
  string purchaseId = 3;
  bool success = 4;
}

service SaleOrderAssignmentPurchaseId{
  rpc assignmentPurchaseId(SaleOrderAssignmentPurchaseIdRequest) returns(SaleOrderAssignmentPurchaseIdResult) {}
}